--- a/StudentDAL/src/main/resources/application.properties
+++ b/StudentDAL/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/projectdb
 spring.datasource.password=123dvs
 spring.datasource.username=root
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
